--- a/process/process.ipynb
+++ b/process/process.ipynb
@@ -212,7 +212,7 @@
     "    for old_name in old_names:\n",
     "        new_names.append(new_name_from_old(old_name))\n",
     "    df['编号名称'] = new_names\n",
-    "    df.to_excel(os.path.join(path, excel))\n",
+    "    df.to_excel(os.path.join(path, excel), index=False)\n",
     "    \n",
     "\n",
     "def main():\n",
